--- a/app/src/main/res/layout/activity_home_gerente.xml
+++ b/app/src/main/res/layout/activity_home_gerente.xml
@@ -13,58 +13,94 @@
         android:background="@color/grey"
         tools:context=".HomeGerente">
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/rectangle"
+            style="@style/logo"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:paddingTop="100dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"  />
+
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSair"
-            android:layout_width="match_parent"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-150dp"
-            android:text="Sair"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@+id/btnLiberarloc"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="16dp"
+            android:background="@color/dark_blue"
+            android:drawableEnd="@drawable/baseline_logout_24"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteY="27dp" />
 
-
-        <TextView
-            android:id="@+id/Apresentacao"
-            android:layout_width="match_parent"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/appCompatTextView"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="Bem vindo, nome_gerente"
-            android:textAlignment="center"
+            android:layout_marginTop="40dp"
+            android:fontFamily="@font/kronaone_regular"
+            android:text="@string/home"
+            android:textColor="@color/grey"
             android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="@id/btnSair"
+            app:layout_constraintHorizontal_bias="0.525"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
-            tools:layout_editor_absoluteY="163dp" />
+            app:layout_constraintTop_toTopOf="@id/rectangle" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/Apresentacao"
+            android:layout_width="270dp"
+            android:layout_height="64dp"
+            android:fontFamily="@font/jurabold"
+            android:paddingStart="0dp"
+            android:paddingEnd="2dp"
+            android:text="@string/bem_vindo_gerente"
+            android:textAlignment="textStart"
+            android:textColor="@color/dark_blue"
+            android:textSize="24sp"
+            android:layout_marginTop="59dp"
+            app:drawableStartCompat="@drawable/gerente_icon"
+            tools:ignore="SpeakableTextPresentCheck"
+            app:layout_constraintEnd_toEndOf="@id/rectangle"
+            app:layout_constraintStart_toStartOf="@id/rectangle"
+            app:layout_constraintTop_toBottomOf="@+id/rectangle"
+
+             />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnLiberarloc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
-            android:text="Liberar locação"
+            android:layout_width="230dp"
+            android:layout_height="145dp"
+            android:layout_marginTop="45dp"
+            android:paddingTop="30dp"
+            android:background="@drawable/button_border_round"
+            android:drawableEnd="@drawable/cadeado_gerente"
+            android:text="@string/libera_loc"
+            android:fontFamily="@font/jurabold"
             android:textAlignment="center"
+            android:textColor="@color/grey"
             android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@id/rectangle"
+            app:layout_constraintStart_toStartOf="@id/rectangle"
             app:layout_constraintTop_toBottomOf="@+id/Apresentacao"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             tools:ignore="MissingConstraints" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnAbrirArm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Abrir armário"
+            android:layout_width="230dp"
+            android:layout_height="145dp"
+            android:layout_marginTop="15dp"
+            android:paddingTop="40dp"
+            android:background="@drawable/button_border_round"
+            android:drawableEnd="@drawable/armariogere"
+            android:text="@string/abrir_armario"
             android:textAlignment="center"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
+            android:fontFamily="@font/jurabold"
+            android:textColor="@color/grey"
+            app:layout_constraintEnd_toEndOf="@id/rectangle"
+            app:layout_constraintStart_toStartOf="@id/rectangle"
             app:layout_constraintTop_toBottomOf="@+id/btnLiberarloc"
             tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
