--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,5 +70,11 @@
         <item name="android:background">@drawable/quadradonc</item>
     </style>
 
+    <style name="nfc_character">
+        <item name="android:layout_width">329.67dp</item>
+        <item name="android:layout_height">360.42dp</item>
+        <item name="android:background">@drawable/nfc</item>
+    </style>
+
 
 </resources>
