Date validation for user registration and card registration forms

--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -100,7 +100,7 @@
             android:layout_height="52dp"
             android:fontFamily="@font/juraregular"
             android:hint="@string/data_nascimento"
-            android:inputType="text"
+            android:inputType="date"
             android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="@id/etCpf"
             app:layout_constraintStart_toStartOf="@id/etCpf"
