--- a/app/src/main/res/layout/activity_register_credit_card.xml
+++ b/app/src/main/res/layout/activity_register_credit_card.xml
@@ -190,7 +190,8 @@
             android:width="143dp"
             android:fontFamily="@font/juraregular"
             android:hint="@string/dataexpira"
-            android:inputType="text"
+            android:inputType="datetime"
+            android:maxLength="5"
             android:paddingStart="10dp"
             android:paddingTop="10dp"
             android:paddingEnd="1dp"
