Correção de erros pequenos

--- a/app/src/main/res/layout/dialog_select_person.xml
+++ b/app/src/main/res/layout/dialog_select_person.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/Dialogo"
@@ -13,10 +14,10 @@
         android:textAlignment="center"
         android:textColor="@color/dark_blue"
         android:textSize="25sp"
-        android:layout_marginTop="0dp"
-
-
-        tools:ignore="MissingConstraints" />
+        android:layout_marginBottom="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/btnOnePerson"/>
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -29,7 +30,8 @@
         android:textAlignment="center"
         android:textColor="@color/grey"
         android:textSize="20sp"
-
+        app:layout_constraintStart_toStartOf="@id/Dialogo"
+        android:layout_marginStart="20dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="10dp"
         tools:layout_editor_absoluteY="171dp" />
@@ -45,6 +47,8 @@
         android:textColor="@color/grey"
         android:textSize="20sp"
         tools:ignore="MissingConstraints"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="@id/Dialogo"
         tools:layout_editor_absoluteX="211dp"
         tools:layout_editor_absoluteY="170dp" />
 
