--- a/app/src/main/res/layout/activity_liberar_loc_screen.xml
+++ b/app/src/main/res/layout/activity_liberar_loc_screen.xml
@@ -7,4 +7,27 @@
     android:layout_height="match_parent"
     tools:context=".LiberarLocScreen">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/rectangle"
+        style="@style/logo"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:paddingTop="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"  />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/appCompatTextView"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/kronaone_regular"
+        android:text="@string/libera_loc"
+        android:textColor="@color/grey"
+        android:textSize="16sp"
+        android:textAlignment="center"
+        android:padding="-9dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/rectangle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
