--- a/app/src/main/res/layout/activity_liberar_loc_screen.xml
+++ b/app/src/main/res/layout/activity_liberar_loc_screen.xml
@@ -30,4 +30,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/rectangle" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnVoltar"
+        style="@style/button_voltar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="80dp"
+        android:drawableStart="@drawable/baseline_arrow_back_ios_new_24"
+        android:paddingStart="8dp"
+        android:paddingEnd="0dp"
+        app:layout_constraintEnd_toStartOf="@id/appCompatTextView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
