--- a/app/src/main/res/layout/activity_confirmar_usuario.xml
+++ b/app/src/main/res/layout/activity_confirmar_usuario.xml
@@ -6,13 +6,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ConfirmarUsuario">
+    tools:context=".ConfirmarUsuario"
+    android:background="@color/grey">
+
+    <ImageView
+        android:id="@+id/rectangle"
+        style="@style/logo"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:paddingTop="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnVoltar"
+        style="@style/button_voltar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="80dp"
+        android:drawableStart="@drawable/baseline_arrow_back_ios_new_24"
+        android:paddingStart="8dp"
+        android:paddingEnd="0dp"
+        app:layout_constraintEnd_toStartOf="@id/appCompatTextView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/appCompatTextView"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:fontFamily="@font/kronaone_regular"
+        android:text="@string/abrir_armario2"
+        android:textColor="@color/grey"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:padding="-9dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/rectangle" />
 
     <TextView
         android:id="@+id/texto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CONFIRME O CLIENTE"
+        android:fontFamily="@font/kronaone_regular"
+        android:text="@string/confirme"
+        android:textColor="@color/dark_blue"
+        android:textSize="18sp"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toTopOf="@+id/photoImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +67,6 @@
         android:id="@+id/photoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,10 +74,15 @@
 
     <Button
         android:id="@+id/btnProsseguir"
-        android:text="PROSSEGUIR"
+        style="@style/login_button"
+        android:layout_width="250dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="230dp"
+        android:fontFamily="@font/kronaone_regular"
+        android:gravity="center"
+        android:text="@string/prosseguir"
         android:textColor="@color/grey"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
