--- a/app/src/main/res/layout/activity_encerrar_loc_screen.xml
+++ b/app/src/main/res/layout/activity_encerrar_loc_screen.xml
@@ -30,7 +30,7 @@
             android:layout_height="47dp"
             android:layout_marginTop="30dp"
             android:fontFamily="@font/kronaone_regular"
-            android:text="ENCERRAR LOCAÇÃO"
+            android:text="@string/encerrar"
             android:textColor="@color/grey"
             android:textSize="20sp"
             android:textAlignment="center"
@@ -59,7 +59,7 @@
             android:layout_height="70dp"
             android:layout_marginTop="150dp"
             android:fontFamily="@font/kronaone_regular"
-            android:text="APROXIME A PULSEIRA"
+            android:text="@string/Aprox"
             android:textColor="@color/dark_blue"
             android:textSize="22sp"
             android:textAlignment="center"
