--- a/app/src/main/res/layout/dialog_select_person.xml
+++ b/app/src/main/res/layout/dialog_select_person.xml
@@ -6,20 +6,23 @@
     android:layout_height="match_parent"
     android:background="@color/grey">
 
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/Dialogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="-20dp"
         android:fontFamily="@font/kronaone_regular"
-        android:padding="25dp"
+        android:padding="35dp"
+        android:drawableTop="@drawable/camera"
         android:text="@string/pergunta"
         android:textAlignment="center"
         android:textColor="@color/dark_blue"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/layoutButtons"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <LinearLayout
         android:id="@+id/layoutButtons"
@@ -37,7 +40,7 @@
             style="@style/login_button"
             android:layout_width="141dp"
             android:layout_height="49dp"
-            android:layout_marginEnd="60dp"
+            android:layout_marginEnd="30dp"
             android:fontFamily="@font/kronaone_regular"
             android:text="@string/OnePerson"
             android:textColor="@color/grey" />
