--- a/app/src/main/res/layout/dialog_lock_options.xml
+++ b/app/src/main/res/layout/dialog_lock_options.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="379dp"
     android:background="@color/grey">
 
     <TextView
@@ -13,9 +13,9 @@
         android:text="@string/opcaoescolha"
         android:textColor="@color/dark_blue"
         android:textSize="18sp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="100dp"
         android:fontFamily="@font/kronaone_regular"
-        app:layout_constraintBottom_toTopOf="@+id/btnOpenLock"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -24,12 +24,15 @@
         style="@style/login_button"
         android:layout_width="250dp"
         android:layout_height="63dp"
+        android:layout_marginTop="70dp"
         android:layout_marginBottom="30dp"
-        android:fontFamily="@font/kronaone_regular"
+        android:fontFamily="@font/jurabold"
         android:gravity="center"
         android:text="@string/abrir_armario"
+        android:textSize="20sp"
         android:textColor="@color/grey"
-        app:layout_constraintBottom_toTopOf="@+id/btnCloseLock"
+        android:textAllCaps="false"
+        app:layout_constraintTop_toTopOf="@id/text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -39,12 +42,15 @@
         android:layout_width="250dp"
         android:layout_height="63dp"
         android:layout_marginBottom="35dp"
-        android:fontFamily="@font/kronaone_regular"
+        android:fontFamily="@font/jurabold"
         android:gravity="center"
         android:text="@string/encerrarlo"
         android:textColor="@color/grey"
+        android:textAllCaps="false"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnOpenLock" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
