--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -7,13 +7,39 @@
     android:layout_height="match_parent"
     tools:context=".CameraActivity">
 
+    <ImageView
+        android:id="@+id/rectangle"
+        style="@style/logo"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:paddingTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnVoltar"
+        style="@style/button_voltar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="8dp"
+        android:drawableStart="@drawable/baseline_arrow_back_ios_new_24"
+        android:paddingStart="4dp"
+        android:paddingEnd="0dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="@id/cameraPreview"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <androidx.camera.view.PreviewView
         android:id="@+id/cameraPreview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@id/btnTakePicture" />
+        app:layout_constraintBottom_toBottomOf="@id/rectangle"
+        app:layout_constraintBottom_toTopOf="@id/btnTakePicture"
+        app:layout_constraintTop_toBottomOf="@+id/rectangle" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnTakePicture"
