--- a/app/src/main/res/layout/activity_confirmar_usuario.xml
+++ b/app/src/main/res/layout/activity_confirmar_usuario.xml
@@ -5,9 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ConfirmarUsuario"
-    android:background="@color/grey">
+    android:background="@color/grey"
+    tools:context=".ConfirmarUsuario">
 
     <ImageView
         android:id="@+id/rectangle"
@@ -15,20 +14,20 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:paddingTop="100dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnVoltar"
         style="@style/button_voltar"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="80dp"
         android:drawableStart="@drawable/baseline_arrow_back_ios_new_24"
-        android:paddingStart="8dp"
+        android:paddingStart="4dp"
         android:paddingEnd="0dp"
         app:layout_constraintEnd_toStartOf="@id/appCompatTextView"
         app:layout_constraintTop_toTopOf="parent"
@@ -57,17 +56,25 @@
         android:text="@string/confirme"
         android:textColor="@color/dark_blue"
         android:textSize="18sp"
-        android:layout_marginBottom="-100dp"
-        app:layout_constraintBottom_toTopOf="@+id/photoImageView"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="70dp"
+        app:layout_constraintTop_toBottomOf="@id/appCompatTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+<!--    <androidx.viewpager2.widget.ViewPager2-->
+<!--        android:id="@+id/viewPager"-->
+<!--        android:layout_width="315dp"-->
+<!--        android:layout_height="429dp"-->
+<!--        android:layout_marginTop="24dp"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/texto"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent" />-->
+
 
     <ImageView
         android:id="@+id/photoImageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="315dp"
+        android:layout_height="429dp"
         android:layout_marginTop="90dp"
         android:contentDescription="@string/content_Description"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -79,30 +86,29 @@
 
     <ImageView
         android:id="@+id/photoImageView2"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnProsseguir"
+        android:layout_width="315dp"
+        android:layout_height="429dp"
+        android:layout_marginTop="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        />
+
 
     <Button
         android:id="@+id/btnProsseguir"
         style="@style/login_button"
         android:layout_width="250dp"
         android:layout_height="49dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="90dp"
         android:fontFamily="@font/kronaone_regular"
         android:gravity="center"
         android:text="@string/confirmapessoa"
         android:textColor="@color/grey"
         android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/photoImageView2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/photoImageView"
-        />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
