--- a/app/src/main/res/layout/dialog_select_person.xml
+++ b/app/src/main/res/layout/dialog_select_person.xml
@@ -10,10 +10,10 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/Dialogo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="-20dp"
+        android:layout_height="230dp"
+        android:layout_marginBottom="-35dp"
         android:fontFamily="@font/kronaone_regular"
-        android:padding="35dp"
+        android:padding="45dp"
         android:drawableTop="@drawable/camera"
         android:text="@string/pergunta"
         android:textAlignment="center"
@@ -22,6 +22,20 @@
         app:layout_constraintBottom_toTopOf="@id/layoutButtons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <ImageButton
+        android:id="@+id/btnClose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/baseline_close_24"
+        android:contentDescription="@string/close"
+        android:layout_gravity="end"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/Dialogo"
+        android:layout_marginStart="-80dp"
+        android:layout_marginBottom="-55dp"
         />
 
     <LinearLayout
