--- a/app/src/main/res/layout/dialog_loc_status.xml
+++ b/app/src/main/res/layout/dialog_loc_status.xml
@@ -3,30 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/dark_blue">
+    android:gravity="center"
+    android:background="@color/dark_blue"
+    android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/imageLock"
         android:layout_width="154dp"
         android:layout_height="199dp"
-        android:contentDescription="@string/content_Description"
+        android:layout_marginTop="296dp"
         android:background="@drawable/check"
-        android:layout_marginTop="200dp"
+        android:contentDescription="@string/content_Description"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginBottom="-100dp"
         android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="24sp"
+        android:fontFamily="@font/kronaone_regular"
+        android:textColor="@color/grey"
+        app:layout_constraintBottom_toBottomOf="@id/imageLock"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
