--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,6 +84,17 @@
         <item name="android:padding">16dp</item>
     </style>
 
+    <style name="FullScreenDialog">
+        <item name="android:windowBackground">@color/dark_blue</item>
+    </style>
 
+    <style name="button_options">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/button_login</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:textColor">@color/grey</item>
+    </style>
 
 </resources>
