--- a/app/src/main/res/layout/activity_confirmar_usuario.xml
+++ b/app/src/main/res/layout/activity_confirmar_usuario.xml
@@ -56,7 +56,7 @@
         android:text="@string/confirme"
         android:textColor="@color/dark_blue"
         android:textSize="18sp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/appCompatTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -73,42 +73,45 @@
 
     <ImageView
         android:id="@+id/photoImageView"
-        android:layout_width="315dp"
-        android:layout_height="429dp"
-        android:layout_marginTop="90dp"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_marginTop="10dp"
         android:contentDescription="@string/content_Description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck"
-        />
+        app:layout_constraintVertical_bias="0.379"
+        tools:ignore="SpeakableTextPresentCheck" />
+
 
     <ImageView
         android:id="@+id/photoImageView2"
-        android:layout_width="315dp"
-        android:layout_height="429dp"
-        android:layout_marginTop="90dp"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_marginTop="295dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
-
+        app:layout_constraintVertical_bias="0.373" />
 
     <Button
         android:id="@+id/btnProsseguir"
         style="@style/login_button"
         android:layout_width="250dp"
         android:layout_height="49dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/kronaone_regular"
         android:gravity="center"
         android:text="@string/confirmapessoa"
         android:textColor="@color/grey"
         android:textSize="22sp"
-        app:layout_constraintTop_toBottomOf="@id/photoImageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/photoImageView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
